[tool.poetry]
name = "blackjack"
version = "0.1.0"
description = ""
authors = ["Evgenii Gusev <ged1994@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
colored = "^2.2.3"
inquirer = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pyinstaller = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
